--- a/home_layout.css
+++ b/home_layout.css
@@ -53,6 +53,9 @@ footer{
 	align-content: center;
 	background-color: rgb(255, 174, 0);
 }
+.navbar-brand{
+	color:rgb(255, 174, 0);
+}
 
 .container{
 	display: flex;
@@ -225,5 +228,13 @@ display: none;
 	.navbar-nav .nav-link i.fa-address-book{
 		display: inline-block;
 		margin-right: 5px;
+	}
+	.nav-item.dropdown{
+		display: none;
+	}
+}
+@media (min-width: 992px) {
+	.nav-item.dropdown{
+		display: block;
 	}
 }
